feat: first section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <body>
     <header>
         <img class="logo" src="./img/logo.svg" alt="logo boolean"/>
-        
     </header>
     <main>
         <section>
-        <h1><strong> Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</strong></h1>
+            <h1><strong> Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</strong></h1>
+            <div class="intestazione">Scritto da <a class="author-link" href="https://boolean.careers/?utm_source=google&utm_campaign=it_search_brand&utm_medium=cpc&utm_content=boolean&utm_term=boolean&gad_source=1&gclid=Cj0KCQjw7Py4BhCbARIsAMMx-_Jk-hTcbbod_GDCUhtVswNX8mbtTibBQZgIediLVC9gs908-d7st3QaAj5uEALw_wcB">The Booleaner</a></div> 
+            <div class="data"><small>il 10/10/2022</small></div>
+            <div class="primi-piani">
+                <img src="./img/tim-1.jpg" alt="Tim 1">
+                <img src="./img/tim-2.jpg" alt="Tim 2">
+                <div>1st foto didascalia</div>
+                <div>2st foto didascalia</div>
+            </div>
         </section>
     </main>
 </body>
