feat: second section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,39 @@
                 <div>2st foto didascalia</div>
             </div>
         </section>
+        <section>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark> Porro laudantium quas quibusdam </mark> non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi? </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</li>
+            </ul>
+            <table>
+                <thead>
+                    <tr class="prima-riga">
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th class="cell-bigger">Lorem ipsum dolor</th>
+                    </tr>
+                    <tr class="seconda-riga">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cell-bigger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cell-bigger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</td>
+                    </tr>
+                    <tr class="terza-riga">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td class="cell-bigger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laudantium quas quibusdam non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</td>
+                    </tr>
+                </thead>
+            </table>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark> Porro laudantium quas quibusdam </mark> non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</p>
+        </section>
     </main>
 </body>
 </html>
