--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
             </table>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark> Porro laudantium quas quibusdam </mark> non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</p>
         </section>
+        <section>
+            <div class="interessi"> Potrebbero interessarti</div>
+            <div id="monitor" class="box-img">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
+            <div id="monitor" class="box-img2">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
+        </section>
     </main>
 </body>
 </html>
