feat: add comments

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- header creation -->
     <header>
         <img class="logo" src="./img/logo.svg" alt="logo boolean"/>
     </header>
+    <!-- header creation -->
     <main>
+        <!-- author info and first section -->
         <section>
             <h1><strong> Internet deve essere al servizio del "bene publico": il manifesto di Tim Berners-Lee</strong></h1>
             <div class="intestazione">Scritto da <a class="author-link" href="https://boolean.careers/?utm_source=google&utm_campaign=it_search_brand&utm_medium=cpc&utm_content=boolean&utm_term=boolean&gad_source=1&gclid=Cj0KCQjw7Py4BhCbARIsAMMx-_Jk-hTcbbod_GDCUhtVswNX8mbtTibBQZgIediLVC9gs908-d7st3QaAj5uEALw_wcB">The Booleaner</a></div> 
@@ -22,6 +25,8 @@
                 <div>2st foto didascalia</div>
             </div>
         </section>
+        <!-- author info and first section -->
+        <!-- second section adn unordered list -->
         <section>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark> Porro laudantium quas quibusdam </mark> non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</p>
             <ul>
@@ -55,6 +60,8 @@
             </table>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <mark> Porro laudantium quas quibusdam </mark> non consectetur fuga animi dolor soluta? Accusantium aliquam, quia quae architecto sapiente deleniti impedit necessitatibus optio officiis excepturi?</p>
         </section>
+        <!-- second section adn unordered list -->
+        <!-- final section and images -->
         <section>
             <div class="interessi"> Potrebbero interessarti</div>
             <div id="monitor" class="box-img">
@@ -64,6 +71,7 @@
                 <h3>Lorem ipsum dolor</h3>
             </div>
         </section>
+        <!-- final section and images -->
     </main>
 </body>
 </html>
