fix: delete duplicate id

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div id="monitor" class="box-img">
                 <h3>Lorem ipsum dolor</h3>
             </div>
-            <div id="monitor" class="box-img2">
+            <div id="monitor2" class="box-img2">
                 <h3>Lorem ipsum dolor</h3>
             </div>
         </section>
